<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aldieemaulana.president.activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar"
        app:elevation="0dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:contentInsetStart="@null"
            style="@style/AppTheme.Toolbar"
            app:elevation="0dp"
            android:weightSum="1">

            <RelativeLayout
                android:id="@+id/buttonRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </RelativeLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name_main"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_navbar_title"
                fontPath="fonts/latoRegular.ttf"
                tools:ignore="MissingPrefix" />


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:background="@color/colorBackgroundPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/appBar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".78"
            android:background="@color/colorPrimary">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/bgtown"
                android:layout_centerVertical="true" />
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="-45dp"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/buttonList"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="90dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/button_menu"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/view_design_list"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_menu_subtitle"
                    android:layout_marginBottom="@dimen/text_menu_bottom"
                    fontPath="fonts/latoLight.ttf"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/list_style"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_menu_title"
                    fontPath="fonts/latoRegular.ttf"
                    tools:ignore="MissingPrefix" />


            </LinearLayout>
            <LinearLayout android:layout_width=".98dp" android:layout_height="90dp" android:background="@color/colorWhite" android:orientation="vertical">
                <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight=".2"/>
                <View android:layout_width="match_parent" android:background="@color/colorBackgroundSecondary" android:layout_height="0dp" android:layout_weight=".8"/>
                <View android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight=".2"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/buttonGrid"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="90dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/button_menu"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/view_design_grid"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_menu_subtitle"
                    android:layout_marginBottom="@dimen/text_menu_bottom"
                    fontPath="fonts/latoLight.ttf"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/grid_style"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_menu_title"
                    fontPath="fonts/latoRegular.ttf"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/copyright_aldiee"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_menu_smalltitle"
            android:layout_marginBottom="-25dp"
            android:layout_marginTop="80dp"
            fontPath="fonts/latoLight.ttf"
            tools:ignore="MissingPrefix" />

    </LinearLayout>



</RelativeLayout>