<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical"
        android:gravity="bottom">

        <RelativeLayout
            android:id="@+id/layout"
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:clickable="true"
            android:background="@drawable/button_menu"
            android:paddingLeft="@dimen/activity_horizontal_margin_small"
            android:paddingRight="@dimen/activity_horizontal_margin_small"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="98dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/country_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/president_of"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_list_small"
                    android:layout_marginBottom="@dimen/component_bottom_small"
                    fontPath="fonts/latoLight.ttf"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/president_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/president_name"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_list_big"
                    android:layout_marginBottom="@dimen/component_bottom_small"
                    fontPath="fonts/latoRegular.ttf"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/birth_of_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/presiden_birth"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_list_extrasmall"
                    fontPath="fonts/latoLight.ttf"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>

            <TextView
                android:layout_alignParentRight="true"
                android:id="@+id/rate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="top|right"
                android:layout_marginTop="@dimen/component_bottom_medium"
                android:gravity="center"
                android:text="@string/rate"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_list_small"
                android:layout_marginLeft="@dimen/component_bottom_medium"
                fontPath="fonts/latoRegular.ttf"
                tools:ignore="MissingPrefix"
                android:background="@drawable/cirlce_yellow"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="-10dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_small"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:gravity="top">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/president"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                app:civ_border="false"
                android:src="@drawable/x"/>
            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/country"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                app:civ_border="false"
                android:src="@drawable/indonesia"/>
        </RelativeLayout>


    </RelativeLayout>
</LinearLayout>